package ub.edu.resources.dao;

public interface DAORelacioLocalitatRuta extends DAO<Parell<String, String>> {
}
