package ub.edu.resources.dao;

public interface DAORelacioTransportRuta extends DAO<Parell<String, String>>{
}
