@startuml

title __DAO's Class Diagram__\n

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAO {
        {abstract} + add()
        {abstract} + delete()
        {abstract} + getAll()
        {abstract} + getById()
        {abstract} + update()
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOComarca {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOLocalitat {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOPersona {
        {abstract} + findPersonaByUserNameAndPassword()
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORelacioComarcaRuta {
        {abstract} + getComarquesByRuta()
        {abstract} + getRutesByComarca()
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORelacioLocalitatRuta {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORelacioTransportRuta {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORuta {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOTransport {
    }
  }
  

  namespace ub.edu.resources.dao {
    class ub.edu.resources.dao.Parell {
        + Parell()
        + getElement1()
        + getElement2()
        + setElement1()
        + setElement2()
    }
  }
  

  ub.edu.resources.dao.Parell o-- T : element1
  ub.edu.resources.dao.Parell o-- V : element2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
